Revision history for {{$dist->name}}

{{$NEXT}}

2.21      2021-03-27 09:21:28 -0600
  - Updated my dists to latest
  - Added Test2::Tools::Process
  - Remove Test::Exit

2.20      2021-03-20 04:56:40 -0600
  - Updated my dists to latest
  - Added FFI::Platypus::Declare
  - Added Alien::OpenSSL

2.19      2020-07-10 12:19:50 -0600
  - Updated my dists to latest
  - Remove deprecated module Module::Build::FFI
  - Remove deprecated module FFI::Util
  - Remove unused module Archive::Libarchive::FFI
  - Remove merged module Wasm::Hook
  - Added Const::Introspect::C
  - Added Clang::CastXML
  - Added Alien::castxml

2.18      2020-05-20 17:28:20 -0600
  - Updated my dists to latest
  - Removed deprecated WebService::Livejournal
  - Added Alien::libpcre

2.17      2020-05-14 19:26:28 -0400
  - Updated my dists to latest
  - Remove deprecated module Alien::nragent
  - Remove deprecated module NewRelic::Agent::FFI
  - Added Alien::libnewrelic
  - Added App::plasm
  - Added Devel::ebug
  - Added FFI::C
  - Added FFI::Platypus::Lang::Go
  - Added FFI::Platypus::Type::Enum
  - Added NewFangle
  - Added Test2::Tools::PerlCritic

2.16      2020-04-25 16:58:27 -0600
  - Updated my dists to latest
  - Added FFI::Platypus::Type::PtrObject

2.15      2020-04-20 13:17:00 -0600
  - Switched to EUMM
  - Removed Dist::Zilla::Plugin::Author::Plicease (now reunited with Dist::Zilla::PluginBundle::Author::Plicease)
  - Altered exclusion logic for MSWin32 (mainly to account for Visual C++ + vcpkg)
  - Updated my dists to latest
  - Added Acme::Ford::Prefect2::FFI
  - Added Alien::libuv
  - Added Alien::help2man
  - Added Alien::wasmtime
  - Added App::supertouch
  - Added Text::Hunspell
  - Added Wasm
  - Added Wasm::Hook
  - Added Win32::Vcpkg

2.14      2019-12-16 12:21:02 -0700
  - Updated my dists to latest

2.12      2019-12-14 13:55:13 -0700
  - Updated my dists to latest
  - Added Perl::Critic::Plicease
  - Added Alien::Expat
  - Added FFI::Platypus::Record::StringArray