@@ -24,7 +24,7 @@ Acme::Ford::Prefect2::FFI                      = 2.2900
 Alien                                          = 0.96
 Alien::Alien                                   = 0.02
 Alien::autoconf                                = 0.17
-Alien::automake                                = 0.15
+Alien::automake                                = 0.16
 Alien::Autotools                               = 1.05
 Alien::Base::ModuleBuild                       = 1.15
 Alien::bison                                   = 0.21
@@ -36,7 +36,7 @@ Alien::Build::Plugin::Download::GitHub         = 0.06
 Alien::Build::Plugin::Fetch::Cache             = 0.04
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
 Alien::Build::Plugin::Probe::Override          = 0.03
-Alien::Build::Plugin::Fetch::Prompt            = 0.59
+Alien::Build::Plugin::Fetch::Prompt            = 0.60
 Alien::Build::Plugin::Fetch::Rewrite           = 0.02
 Alien::castxml                                 = 0.01
 Alien::chromaprint                             = 0.02
@@ -84,9 +84,9 @@ AnyEvent::FTP                                  = 0.16
 AnyEvent::Ident                                = 0.08
 AnyEvent::Open3::Simple                        = 0.87
 AnyEvent::WebSocket::Client                    = 0.54
-App::af                                        = 0.16
+App::af                                        = 0.17
 App::cpangitify                                = 0.17
-App::plasm                                     = 0.02
+App::plasm                                     = 0.03
 App::Prove::Plugin::TermTable                  = 0.03
 App::Prove::Plugin::TermTableStty              = 0.03
 App::pwhich                                    = 1.16
@@ -105,7 +105,7 @@ Devel::ebug                                    = 0.63
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.31
 Dist::Zilla::Plugin::Alt                       = 0.07
-Dist::Zilla::Plugin::CommentOut                = 0.01
+Dist::Zilla::Plugin::CommentOut                = 0.04
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::FFI                       = 1.04
 Dist::Zilla::Plugin::InsertExample             = 0.10
@@ -122,7 +122,7 @@ FFI::C                                         = 0.10
 FFI::CheckLib                                  = 0.27
 FFI::ExtractSymbols                            = 0.04
 FFI::Platypus                                  = 1.43
-FFI::Platypus::Declare                         = 1.33
+FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.05
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.12
@@ -132,7 +132,7 @@ FFI::Platypus::Lang::Rust                      = 0.09
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
 FFI::Platypus::Type::Enum                      = 0.04
-FFI::Platypus::Type::PtrObject                 = 0.02
+FFI::Platypus::Type::PtrObject                 = 0.03
 FFI::TinyCC                                    = 0.30
 FFI::TinyCC::Inline                            = 0.28
 File::LibMagic::FFI                            = 0.04
@@ -170,11 +170,10 @@ Test2::Tools::JSON::Pointer                    = 0.02
 Test2::Tools::PerlCritic                       = 0.04
 Test2::Tools::Process                          = 0.05
 Test2::Tools::URL                              = 0.06
-Text::Hunspell::FFI                            = 0.02
+Text::Hunspell::FFI                            = 0.04
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.07
 Wasm                                           = 0.21
-WebService::DailyConnect                       = 0.02
 Win32::ErrorMode                               = 0.06
 Win32::Getppid                                 = 0.05
 Win32::Process::Info                           = 1.022
